# qIRC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
